fix(Table) Removed fixed head, fix(Table) Text overflow

--- a/src/main.css
+++ b/src/main.css
@@ -15,7 +15,7 @@
   --color-background-dark: #131a21;
   --color-background-darker: #0d0f10;
   
-  --font-size-small: 12px;
+  --font-size-small: 15px;
   --font-size-main: 18px;
   --font-size-big: 22px;
 }
